<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pre_shared_key"
            android:layout_gravity="center_vertical"
            />


        <ImageView
            android:id="@+id/pskHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_info"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/etPSK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_psk"
        android:textSize="14sp"
        android:theme="@style/BrandedEditText.control" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_connect" />


    </RelativeLayout>


</LinearLayout>
