<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:text="@string/lbl_primary_protocol" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/primaryProtocolSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="40dp"
            android:spinnerMode="dropdown"
            android:theme="@style/BrandedSpinner.control"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/laySecondaryProtocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:text="@string/lbl_secondary_protocol" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/secondaryProtocolSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="40dp"
            android:spinnerMode="dropdown"
            android:theme="@style/BrandedSpinner.control"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layTertiaryProtocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:text="@string/lbl_tertiary_protocol" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/tertiaryProtocolSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="40dp"
            android:spinnerMode="dropdown"
            android:theme="@style/BrandedSpinner.control"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:text="@string/lbl_select_channel" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/channelsSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="40dp"
            android:spinnerMode="dropdown"
            android:theme="@style/BrandedSpinner.control"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_connect" />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>


